--- a/frontend/telran_project_frontend/src/components/Header/style.module.css
+++ b/frontend/telran_project_frontend/src/components/Header/style.module.css
@@ -131,6 +131,7 @@
 
 .modal_basket_total :last-child {
   color: var(--lightGrey);
+  padding-right: 20px;
 }
 
 .menu_icon {
